--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <main>
 
             <article>
-                <h2>Titutlo da Postagem</h2>
+                <h2>Titutlo da Postagem1</h2>
                 <h5>JM,22 de janeiro,2025</h5>
                 <div class="fake">Image</div>
 
@@ -51,19 +51,19 @@
                     corrupti?</p>
             </article>
 
+
+            <article>
+                <h2>Titutlo da Postagem 2</h2>
+                <h5>JM,22 de janeiro,2025</h5>
+                <div class="fake">Image</div>
+
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ratione eos eveniet tempora dignissimos
+                    cumque culpa quaerat sint? Tempora, officiis ipsa magnam pariatur inventore nihil enim iusto quis ad
+                    corrupti?</p>
+            </article>
 
             <article>
                 <h2>Titutlo da Postagem 3</h2>
-                <h5>JM,22 de janeiro,2025</h5>
-                <div class="fake">Image</div>
-
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ratione eos eveniet tempora dignissimos
-                    cumque culpa quaerat sint? Tempora, officiis ipsa magnam pariatur inventore nihil enim iusto quis ad
-                    corrupti?</p>
-            </article>
-
-            <article>
-                <h2>Titutlo da Postagem 4</h2>
                 <h5>JM,22 de janeiro,2025</h5>
                 <div class="fake">Image</div>
 
@@ -77,7 +77,9 @@
 
     </div>
 
-    <footer></footer>
+    <footer>
+        <p>CopyRight-Frutas Naturais Todos os direitos reservados</p>
+    </footer>
 
 </body>
 
