--- a/index.html
+++ b/index.html
@@ -1,86 +1,150 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Colheita Viva</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/style.css">
-    <title>Frutas Naturais</title>
-</head>
-
-<body>
-
+  <body>
     <header>
-        <h1>Frutas Naturais</h1>
-        <p>O melhor conteúdo para quem gosta de frutas</p>
+      <h1>Colheita Viva 🌿</h1>
+      <p>Da natureza para você: sabor, saúde e vida em cada fruto.</p>
     </header>
 
     <nav>
-        <a href="index.html">Inicio</a>
-        <a href="#">Promoções</a>
-        <a href="#">Destaques</a>
-        <a href="#">Contatos</a>
-
+      <a href="index.html">Inicio</a>
+      <a href="#">Promoções</a>
+      <a href="#">Destaques</a>
+      <a href="#">Contatos</a>
     </nav>
 
     <div class="row">
+      <aside>
+        <h2>Sobre</h2>
+        <h5>Chá de Boldo</h5>
+        <div class="container">
+          <img
+            src="./image/ColheitaViva.png"
+            alt="boldo"
+            style="width: 26rem"
+          />
+        </div>
+        <p>
+          Colheita Viva é mais do que um nome — é a celebração do que a natureza
+          oferece de melhor. Nosso compromisso é levar até você frutas frescas,
+          cultivadas com respeito à terra e carinho em cada detalhe. Acreditamos
+          na pureza dos alimentos e no poder dos sabores naturais para
+          transformar vidas. Cada fruto é uma história de cuidado, saúde e
+          vitalidade, direto da natureza para a sua mesa.
+        </p>
 
-        <aside>
-            <h2>Sobre</h2>
-            <h5>Foto</h5>
-            <div class="fake">Image</div>
-            <p>Descrição...</p>
+        <h3>Fornecedores</h3>
+        <div class="container">
+          <img
+            src="./image/desincha.jpg"
+            alt="desincha"
+            style="height: 20rem; width: 20rem"
+          />
+        </div>
+        <div class="container">
+          <img
+            src="./image/leão.webp"
+            alt="leão"
+            style="height: 26rem; width: 20rem"
+          />
+        </div>
+        <div class="container">
+          <img
+            src="./image/chileno.png"
+            alt="desincha"
+            style="height: 20rem; width: 24rem"
+          />
+        </div>
+        <div class="container">
+          <img
+            src="./image/Dr.Oetker.webp"
+            alt="desincha"
+            style="height: 20rem; width: 20rem"
+          />
+        </div>
+      </aside>
 
-            <h3>Fornecedores</h3>
-            <div class="fake">Image</div>
-            <div class="fake">Image</div>
-            <div class="fake">Image</div>
-            <div class="fake">Image</div>
+      <main>
+        <article>
+          <h2>Você já ouviu falar das qualidades da erva-cidreira?</h2>
+          <h5>JM,22 de janeiro,2025</h5>
+          <div class="container">
+            <img src="./image/erva-cidreira-1.webp" alt="erva-cidreira" />
+          </div>
 
-        </aside>
+          <p>
+            A erva-cidreira, também conhecida como capim-cidreira ou melissa,
+            oferece diversos benefícios para a saúde, sendo um calmante natural
+            e auxiliar no alívio de ansiedade, estresse, dores de cabeça e
+            problemas gastrointestinais. Além disso, pode melhorar a qualidade
+            do sono, fortalecer o sistema imunológico e até mesmo auxiliar no
+            controle da glicose no sangue.
+          </p>
+        </article>
 
-        <main>
+        <article>
+          <h2>Melhore seu sono com a camomila!</h2>
+          <h5>JM,02 de fevereiro,2025</h5>
+          <div class="container">
+            <img src="./image/camomila.jpeg" alt="camomila" />
+          </div>
 
-            <article>
-                <h2>Titutlo da Postagem1</h2>
-                <h5>JM,22 de janeiro,2025</h5>
-                <div class="fake">Image</div>
+          <p>
+            A camomila é uma planta medicinal de pétalas brancas e centro
+            amarelo, que é muito utilizada na preparação de infusões para tratar
+            ansiedade, insônia, má digestão e cólica menstrual. Além disso,
+            também tem excelentes propriedades cicatrizantes, podendo ser usada
+            para ajudar na cicatrização de feridas. O nome científico da
+            camomila é Matricaria recutita e a parte mais utilizada é a sua
+            flor, que serve para preparar infusões, inalações, banhos de
+            assento, compressas ou pomadas. Além disso, a camomila também pode
+            ser utilizada para temperar pratos salgados como macarrão e frango,
+            ou para aromatizar doces como brigadeiro e bolos. A camomila pode
+            ser encontrada em ervanários, lojas de produtos naturais, farmácias
+            de manipulação, mercados e algumas feiras livres, na forma de flores
+            secas ou saquinhos de chá.
+          </p>
+        </article>
 
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ratione eos eveniet tempora dignissimos
-                    cumque culpa quaerat sint? Tempora, officiis ipsa magnam pariatur inventore nihil enim iusto quis ad
-                    corrupti?</p>
-            </article>
+        <article>
+          <h2>Hortelâ no cotidiano</h2>
+          <h5>JM,22 de fevereiro,2025</h5>
+          <div class="container">
+            <img src="./image/hortela.webp" alt="hortela" />
+          </div>
 
-
-            <article>
-                <h2>Titutlo da Postagem 2</h2>
-                <h5>JM,22 de janeiro,2025</h5>
-                <div class="fake">Image</div>
-
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ratione eos eveniet tempora dignissimos
-                    cumque culpa quaerat sint? Tempora, officiis ipsa magnam pariatur inventore nihil enim iusto quis ad
-                    corrupti?</p>
-            </article>
-
-            <article>
-                <h2>Titutlo da Postagem 3</h2>
-                <h5>JM,22 de janeiro,2025</h5>
-                <div class="fake">Image</div>
-
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ratione eos eveniet tempora dignissimos
-                    cumque culpa quaerat sint? Tempora, officiis ipsa magnam pariatur inventore nihil enim iusto quis ad
-                    corrupti?</p>
-            </article>
-
-        </main>
-
-
+          <p>
+            A camomila é uma planta medicinal de pétalas brancas e centro
+            amarelo, que é muito utilizada na preparação de infusões para tratar
+            ansiedade, insônia, má digestão e cólica menstrual. Além disso,
+            também tem excelentes propriedades cicatrizantes, podendo ser usada
+            para ajudar na cicatrização de feridas. O nome científico da
+            camomila é Matricaria recutita e a parte mais utilizada é a sua
+            flor, que serve para preparar infusões, inalações, banhos de
+            assento, compressas ou pomadas. Além disso, a camomila também pode
+            ser utilizada para temperar pratos salgados como macarrão e frango,
+            ou para aromatizar doces como brigadeiro e bolos. A camomila pode
+            ser encontrada em ervanários, lojas de produtos naturais, farmácias
+            de manipulação, mercados e algumas feiras livres, na forma de flores
+            secas ou saquinhos de chá.
+          </p>
+        </article>
+      </main>
     </div>
 
     <footer>
-        <p>CopyRight-Frutas Naturais Todos os direitos reservados</p>
+      <p>Copyright © Colheita Viva — Todos os direitos reservados.</p>
+      <p>
+        Desenvolvido por
+        <a href="https://github.com/Joaomarcellodev">Joaomarcello.dev</a>
+      </p>
     </footer>
-
-</body>
-
+  </body>
 </html>
